third_party/move/move-compiler-v2/tests/visibility-checker/script_call_package_fun.move
module 0x42::test {
    public(package) fun foo() {}
}

script {
    fun main() {
        0x42::test::foo()
    }
}
